syntax = "proto3";

package categori;


message Categori {
  string id = 1;
  string title = 2;
  string description = 3;

}



message GetCategoriRequest {
  string categori_id = 1;
}

message GetCategoriResponse {
  Categori categori = 1;
}

message SearchCategorisRequest {
  string query = 1;
}

message SearchCategorisResponse {
  repeated Categori categoris = 1;
}

message CreateCategoriRequest {
  string categori_id = 1;
  string title = 2;
  string description = 3;
}

message CreateCategoriResponse {
  Categori categori = 1;
}

service CategoriService {
  rpc GetCategori(GetCategoriRequest) returns (GetCategoriResponse);
  rpc SearchCategoris(SearchCategorisRequest) returns (SearchCategorisResponse);
  rpc CreateCategori(CreateCategoriRequest) returns (CreateCategoriResponse);
}
